@@ -1,3 +1,9 @@
+Sat Jul  8 22:39:51 CEST 2006  Guillaume Desmottes <cass@skynet.be>
+
+	* src/fe-gnome/fe-gnome.c:
+	  - Pop up the channels list dialog on connect if there are no
+	    channels set to auto-join. (#346974)
+
 Sat Jul  8 13:27:45 MDT 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* configure.ac:
